# FiatLux

./: CMakeLists.txt  README.md  main.cpp  sample_main.cpp
include/: Camera.h  Shader.h  VertexShader.h  windowManager.h
include/glad/: glad.h
src/: Camera.cpp  Shader.cpp  VertexShader.cpp  fs.glsl  glad.c  vs.glsl  windowManager.cpp
src/shaders/: blinn_phong_fs.glsl
